Fix JavaScript errors and update to Atlantic Amateur Darts Series

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AADS Invite Manager - Atlantic Armwrestling Development Series</title>
+    <title>AADS Invite Manager - Atlantic Amateur Darts Series</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💪</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎯</text></svg>">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>💪 AADS Invite Manager</h1>
-            <p class="subtitle">Atlantic Armwrestling Development Series</p>
+            <h1>🎯 AADS Invite Manager</h1>
+            <p class="subtitle">Atlantic Amateur Darts Series</p>
             <div id="sync-status" class="sync-status"></div>
         </header>
 
@@ -30,7 +30,7 @@
                     <div class="card stat-card">
                         <h3>Total Players</h3>
                         <p class="stat-number" id="total-players">0</p>
-                        <p class="stat-label">Registered Athletes</p>
+                        <p class="stat-label">Registered Players</p>
                     </div>
                     <div class="card stat-card">
                         <h3>Completed Events</h3>
