Count only events with declared winners as completed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="card stat-card">
                         <h3>Completed Events</h3>
                         <p class="stat-number" id="completed-events">0</p>
-                        <p class="stat-label">Out of 7 Total</p>
+                        <p class="stat-label">With Winners Declared</p>
                     </div>
                     <div class="card stat-card">
                         <h3>TOC Qualified</h3>
@@ -209,6 +209,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     
     <!-- Load Application JavaScript -->
-    <script src="app.js?v=2.6"></script>
+    <script src="app.js?v=2.7"></script>
 </body>
 </html>
