Change status from Active to Previous Participant for series competitors

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                         
                         <select id="status-filter" onchange="filterPlayers()">
                             <option value="all">All Statuses</option>
-                            <option value="Prospect">Prospects</option>
-                            <option value="Active">Active</option>
+                            <option value="Prospect">Prospects (Never Competed)</option>
+                            <option value="Previous Participant">Previous Participants</option>
                             <option value="Winner">Winners</option>
                             <option value="TOC Qualified">TOC Qualified</option>
                         </select>
@@ -209,6 +209,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     
     <!-- Load Application JavaScript -->
-    <script src="app.js?v=2.7"></script>
+    <script src="app.js?v=2.8"></script>
 </body>
 </html>
